--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Homepage</title>
+    <link rel="stylesheet" href="./assets/css/style.css">    
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>
            <a href="/">Hori<span class="seo">seo</span>n</a>
         </h1>
@@ -25,9 +25,9 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
+    </header>
+    <section class="hero"></section>
+    <section class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="book on table with the letters S E O in the middle, 6 icons floating around it saying content, headings, mobile compatibility, solcial media, link building, and backlink"/>
             <h2>Search Engine Optimization</h2>
@@ -49,8 +49,8 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
+    </section>
+    <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="simple symbol with a gear on the top funneling down to a dollar coin"/>
@@ -72,13 +72,13 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+    </section>
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
